# ideas-generator

./: .env.example  .gitignore  CLAUDE.md  ENV_SETUP.md  GEMINI.md  README.md  docker-compose.yml  run_e2e_tests.py  setup.py
.github/workflows/: daily_ideas.yml
directives/: daily_business_ideas.md  podcast_generation_plan.md  podcast_generation_skill.txt  podcast_usage.md
execution/reddit_analyzer/: .dockerignore  Dockerfile  analyze_ideas.py  audio_postproduction.py  collector.py  config.json  generate_podcast_script.py  latest_analysis.md  list_models.py  main.py  podcast_config_advanced.json  pyproject.toml  reddit_ideas.db  requirements-audio.txt  run_graph.py  search.py  semantic_segmentation.py  send_email.py  synthesize_podcast_audio.py  update_podcast_feed.py
